# claude-replay

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  STREAMING-PARSE-DESIGN.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
design/html-dump/: html-export-spec.md
docs/superpowers/plans/: 2026-07-22-shared-jdi-handoff-skill.md  2026-07-23-jdi-preserve-codex-permissions.md  2026-07-23-unified-jdi-codex-reliability.md
docs/superpowers/specs/: 2026-07-22-shared-jdi-handoff-skill-design.md  2026-07-23-jdi-preserve-codex-permissions-design.md
integrations/: README.md  install-jdi-handoff.sh
integrations/claude/: README.md
integrations/claude/commands/: jdi-handoff.md
integrations/claude/skills/jdi-handoff/: SKILL.md
integrations/shared/skills/jdi-handoff/: SKILL.md
src/: app.rs  clipboard.rs  codex_discover.rs  codex_metrics.rs  codex_model.rs  discover.rs  highlight.rs  html_export.rs  jdi.rs  lib.rs  main.rs  markdown.rs  metrics.rs  model.rs  picker.rs  render.rs  tail.rs  theme.rs  view.rs  wrap.rs
src/html/: export.css  export.js
src/jdi/: DESIGN.md  agent.rs  backlog.rs  claude.rs  codex.rs  detect.rs  lock.rs  mod.rs  state.rs  supervisor.rs
tests/: install_jdi_handoff.sh  tmux_smoke.rs
tests/fixtures/: codex-basic.fixture
