[package]
name = "claude-replay"
version = "0.3.6"
edition = "2021"
description = "Interactive, read-only viewer for Claude Code session transcripts (like `claude --resume`, but you can't type)."
license = "MIT"
repository = "https://github.com/tanghong123/claude-replay"
homepage = "https://github.com/tanghong123/claude-replay"
readme = "README.md"
keywords = ["claude", "tui", "ratatui", "transcript", "viewer"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-replay"
path = "src/main.rs"

[[bin]]
name = "codex-replay"
path = "src/bin/codex-replay.rs"

# `cargo binstall claude-replay` pulls the matching prebuilt tarball from the
# GitHub release instead of compiling. Assets are named `claude-replay-<target>.tar.gz`
# with the binary at the archive root (see .github/workflows/release.yml).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = { version = "0.13", default-features = false }
# fancy-regex backend keeps syntect pure-Rust (no oniguruma/C build).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
nucleo = "0.5"
notify = "7"
# System clipboard for mouse-select auto-copy (falls back to an OSC 52 escape when
# no clipboard/display is available, e.g. over SSH). Linux backend is pure-Rust.
arboard = { version = "3", default-features = false }

[profile.release]
opt-level = 2
strip = true
